test/octave.test/error/error-1.m
function g () error ("foo"); endfunction
function f () g (); endfunction
f ();
